Use removeFirst() method of java 21 to remove the first element of list